<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginScreen" android:paddingTop="60dp" android:gravity="bottom|center|top"
        android:id="@+id/relativeLayout" android:paddingBottom="50dp"
        android:background="@drawable/lm_background" android:elevation="40dp">
    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/logoName" android:fontFamily="@font/sf_bold"
            android:typeface="normal" android:textSize="16sp" android:textColor="@color/black_main"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/mainSection" android:gravity="bottom|center_vertical" android:paddingLeft="28dp"
            android:paddingRight="28dp">
        <TextView
                android:text="@string/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcomeText1" android:textSize="56sp"
                android:textColor="@color/black_main" android:fontFamily="@font/sf_bold"/>
        <TextView
                android:text="@string/log_to_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcomeText2" android:textSize="17sp"
                android:textColor="@color/black_main" android:fontFamily="@font/sf_medium"
                android:layout_marginBottom="120dp"/>
        <EditText
                style="@style/LogInInputTile"
                android:id="@+id/usernameInputTile"
                android:inputType="text"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:hint="@string/user_name"
                />
        <EditText
                style="@style/LogInInputTile"
                android:id="@+id/apiKeyInputTile"
                android:hint="@string/api_key"
                android:inputType="textPassword"
                android:autofillHints=""
                android:layout_marginBottom="10dp"
        />
        <TextView
                android:text="@string/where_api_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/whereToApiText" android:textAlignment="textEnd"
                android:layout_marginBottom="60dp" android:textSize="14sp" android:fontFamily="@font/sf_regular"
                android:textColor="@color/brown_200" android:layout_gravity="right"
                android:onClick="whereToApiTextOnClick"/>

        <Button
                android:text="@string/log_in"
                android:layout_width="match_parent"
                android:layout_height="80dp" android:id="@+id/logInButton"
                android:background="@drawable/lm_button" android:textSize="24sp"
                android:fontFamily="@font/sf_medium" android:textAllCaps="false" android:textColor="@color/black_main"
                android:layout_marginBottom="10dp"
                style="?android:attr/borderlessButtonStyle" android:onClick="logIn"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>