<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainScene"
        android:paddingTop="30dp" android:gravity="bottom|center|top"
        android:id="@+id/relativeLayout" android:paddingBottom="10dp"
        android:background="@drawable/lm_background" android:elevation="40dp" android:paddingLeft="28dp"
        android:paddingRight="28dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/logoNameMainScene" android:layout_weight="1"
                android:textSize="16sp" android:textColor="@color/black_main" android:fontFamily="@font/sf_bold"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
                android:src="@drawable/settingsicon"
                android:layout_width="20dp"
                android:layout_height="20dp" android:id="@+id/settingsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="2dp"
                android:contentDescription="@string/action_settings"/>
        <ImageView
                android:src="@drawable/notificationicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/notificationButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/settingsButton"
                android:layout_marginEnd="10dp" android:layout_marginTop="1dp"
                android:contentDescription="@string/action_notifications"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:scrollbars="none"
                android:id="@+id/horizontalScrollView2" android:contentDescription="@string/job_offers"
                android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:orientation="horizontal">
            <com.example.isodnotify.NewsTile android:layout_width="match_parent" android:layout_height="105dp"
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintEnd_toEndOf="parent"/>
            <com.example.isodnotify.NewsTile android:layout_width="match_parent" android:layout_height="105dp"
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintEnd_toEndOf="parent"/>
            <com.example.isodnotify.NewsTile android:layout_width="match_parent" android:layout_height="105dp"
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>
        <TextView
                android:text="@string/news_title"
                android:layout_width="wrap_content"
                android:layout_height="21dp" android:id="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="5dp" android:textSize="16sp" android:fontFamily="@font/sf_regular"
                android:textColor="@color/black_400" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"/>
        <TextView
                android:text="@string/show_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="5dp" android:textSize="14sp" android:fontFamily="@font/sf_bold"
                android:textColor="@color/brown_400" android:layout_marginTop="21dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"/>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/lm_tile_main_section" android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
                android:id="@+id/constraintLayout2" app:layout_constraintTop_toBottomOf="@+id/textView12"
                android:layout_marginTop="5dp">

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:text="@string/upcoming_classes"
                android:layout_width="wrap_content"
                android:layout_height="21dp" android:id="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
                android:fontFamily="@font/sf_regular"
                android:textColor="@color/black_400" android:textSize="16sp" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText"/>
        <TextView
                android:text="@string/show_all"
                android:layout_width="wrap_content"
                android:layout_height="0dp" android:id="@+id/textView13"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/brown_400" android:textSize="14sp"
                android:fontFamily="@font/sf_bold"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText" android:layout_marginTop="21dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/welcomeText"
                android:textSize="30sp" android:textColor="@color/black_400"
                android:fontFamily="@font/sf_bold" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toBottomOf="@+id/logoNameMainScene" android:layout_marginTop="20dp"
                android:text="Cześć, admin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>